@@ -6254,60 +6254,22 @@ operator|.
 name|FIELD_SORT_VALUES
 argument_list|)
 expr_stmt|;
-comment|// make sure that the id is returned for correlation.
-name|String
-name|fl
-init|=
-name|sreq
-operator|.
-name|params
-operator|.
-name|get
-argument_list|(
-name|CommonParams
-operator|.
-name|FL
-argument_list|)
-decl_stmt|;
 if|if
 condition|(
-name|fl
-operator|!=
-literal|null
-condition|)
-block|{
-name|fl
-operator|=
-name|fl
-operator|.
-name|trim
-argument_list|()
-expr_stmt|;
-comment|// currently, "score" is synonymous with "*,score" so
-comment|// don't add "id" if the fl is empty or "score" or it would change the meaning.
-if|if
-condition|(
-name|fl
-operator|.
-name|length
-argument_list|()
-operator|!=
-literal|0
-operator|&&
 operator|!
-literal|"score"
+name|rb
 operator|.
-name|equals
-argument_list|(
-name|fl
-argument_list|)
-operator|&&
-operator|!
-literal|"*"
+name|rsp
 operator|.
-name|equals
+name|getReturnFields
+argument_list|()
+operator|.
+name|wantsField
 argument_list|(
-name|fl
+name|uniqueField
+operator|.
+name|getName
+argument_list|()
 argument_list|)
 condition|)
 block|{
@@ -6315,23 +6277,18 @@ name|sreq
 operator|.
 name|params
 operator|.
-name|set
+name|add
 argument_list|(
 name|CommonParams
 operator|.
 name|FL
 argument_list|,
-name|fl
-operator|+
-literal|','
-operator|+
 name|uniqueField
 operator|.
 name|getName
 argument_list|()
 argument_list|)
 expr_stmt|;
-block|}
 block|}
 name|ArrayList
 argument_list|<
@@ -6510,6 +6467,22 @@ operator|.
 name|getName
 argument_list|()
 decl_stmt|;
+name|boolean
+name|removeKeyField
+init|=
+operator|!
+name|rb
+operator|.
+name|rsp
+operator|.
+name|getReturnFields
+argument_list|()
+operator|.
+name|wantsField
+argument_list|(
+name|keyFieldName
+argument_list|)
+decl_stmt|;
 for|for
 control|(
 name|SolrDocument
@@ -6570,6 +6543,19 @@ argument_list|,
 name|sdoc
 operator|.
 name|score
+argument_list|)
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|removeKeyField
+condition|)
+block|{
+name|doc
+operator|.
+name|removeFields
+argument_list|(
+name|keyFieldName
 argument_list|)
 expr_stmt|;
 block|}
