@@ -1434,6 +1434,175 @@ argument_list|,
 literal|900
 argument_list|)
 expr_stmt|;
+comment|//  variations of fl
+name|query
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"*:*"
+argument_list|,
+literal|"fl"
+argument_list|,
+literal|"score"
+argument_list|,
+literal|"sort"
+argument_list|,
+name|i1
+operator|+
+literal|" desc"
+argument_list|)
+expr_stmt|;
+name|query
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"*:*"
+argument_list|,
+literal|"fl"
+argument_list|,
+name|i1
+operator|+
+literal|",score"
+argument_list|,
+literal|"sort"
+argument_list|,
+name|i1
+operator|+
+literal|" desc"
+argument_list|)
+expr_stmt|;
+name|query
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"*:*"
+argument_list|,
+literal|"fl"
+argument_list|,
+name|i1
+argument_list|,
+literal|"fl"
+argument_list|,
+literal|"score"
+argument_list|,
+literal|"sort"
+argument_list|,
+name|i1
+operator|+
+literal|" desc"
+argument_list|)
+expr_stmt|;
+name|query
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"*:*"
+argument_list|,
+literal|"fl"
+argument_list|,
+literal|"id,"
+operator|+
+name|i1
+argument_list|,
+literal|"sort"
+argument_list|,
+name|i1
+operator|+
+literal|" desc"
+argument_list|)
+expr_stmt|;
+name|query
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"*:*"
+argument_list|,
+literal|"fl"
+argument_list|,
+literal|"id"
+argument_list|,
+literal|"fl"
+argument_list|,
+name|i1
+argument_list|,
+literal|"sort"
+argument_list|,
+name|i1
+operator|+
+literal|" desc"
+argument_list|)
+expr_stmt|;
+name|query
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"*:*"
+argument_list|,
+literal|"fl"
+argument_list|,
+name|i1
+argument_list|,
+literal|"fl"
+argument_list|,
+literal|"id"
+argument_list|,
+literal|"sort"
+argument_list|,
+name|i1
+operator|+
+literal|" desc"
+argument_list|)
+expr_stmt|;
+name|query
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"*:*"
+argument_list|,
+literal|"fl"
+argument_list|,
+literal|"id"
+argument_list|,
+literal|"fl"
+argument_list|,
+name|nint
+argument_list|,
+literal|"fl"
+argument_list|,
+name|tint
+argument_list|,
+literal|"sort"
+argument_list|,
+name|i1
+operator|+
+literal|" desc"
+argument_list|)
+expr_stmt|;
+name|query
+argument_list|(
+literal|"q"
+argument_list|,
+literal|"*:*"
+argument_list|,
+literal|"fl"
+argument_list|,
+name|nint
+argument_list|,
+literal|"fl"
+argument_list|,
+literal|"id"
+argument_list|,
+literal|"fl"
+argument_list|,
+name|tint
+argument_list|,
+literal|"sort"
+argument_list|,
+name|i1
+operator|+
+literal|" desc"
+argument_list|)
+expr_stmt|;
 name|stress
 operator|=
 literal|0
